# magnus-ai

./: .cursorrules  .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  a2a_checklist.md  a2a_client_test.py  a2a_feature.md  alembic.ini  conftest.py  docker-compose.yml  docker_build.sh  evo-ai-api.postman_collection.json  planejamento_atualizado.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml  build-homolog.yml  docker-image.yml  publish_docker_image_homolog.yml  publish_docker_image_latest.yml
docs/: README.md
docs/contributing/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/technical/: API_FLOW.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md
frontend/: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  docker_build.sh  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: ImpersonationBar.tsx  sidebar.tsx  theme-provider.tsx  toaster.tsx
frontend/contexts/: DnDContext.tsx  NodeDataContext.tsx  SourceClickContext.tsx
frontend/hooks/: use-agent-webSocket.ts  use-mobile.tsx  use-toast.ts
frontend/lib/: env.ts  file-utils.ts  utils.ts
frontend/services/: agentService.ts  api.ts  authService.ts  clientService.ts  mcpServerService.ts  sessionService.ts
frontend/styles/: globals.css
frontend/types/: agent.ts  aiModels.ts  auth.ts  mcpServer.ts
migrations/: env.py
migrations/versions/: 07ac76cc090a_add_a2a_fields_in_agents_table.py  2d612b95d0ea_add_tools_field_to_mcp_servers.py  2df073c7b564_add_task_agent_type_agents_table.py  4a61703e9b7e_allow_null_model_and_api_key.py  545d3083200b_add_a2a_fields_in_agents_table.py  611d84e70bb2_add_crew_ai_coluns_agents_table.py  6cd898ec9f7c_add_email_field_on_clients_table.py  6db4a526335b_init_migrations.py  98780d4fb293_add_audit_table.py  9d819594ac9b_init_migration.py  ab6f3a31f3e8_init_migration.py  bdc5d363e2e1_add_crew_ai_agent_type_agents_table.py  c107446e38aa_init_migrations.py  da8e7fb4da5d_fix_agent_table.py  ebac70616dab_worflow_agent.py  (+1 more)
scripts/: run_seeders.py
src/: __init__.py  main.py
static/: test.html  test_a2a_stream.html  test_chat_stream.html
(+190 files in other folders)
